2011-10-24  Eric Seidel  <eric@webkit.org>

        NRWT doesn't support ORWT's --root option, but should
        https://bugs.webkit.org/show_bug.cgi?id=70416

        Reviewed by Dirk Pranke.

        Add support for ORWT's --root option which is used for
        running tests with a nightly build of WebKit.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/layout_tests/port/base.py:
         - webkit_build_path was never called by any code, removed.
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-10-24  David Levin  <levin@chromium.org>

        check-webkit-style complains about WEBKIT_EXPORT in test/WebUnitTests.h
        https://bugs.webkit.org/show_bug.cgi?id=70747

        Reviewed by Tony Chang.

        * Scripts/webkitpy/style/checkers/cpp.py: Allow WEBKIT_EXPORT in tests dir.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Corresponding test.

2011-10-24  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt][WK2] Crash when running pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=70725

        Reviewed by Chang Shu.

        * WebKitTestRunner/qt/TestInvocationQt.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):

2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove g_thread_init() calls
        https://bugs.webkit.org/show_bug.cgi?id=70717

        Reviewed by Xan Lopez.

        With newer glib it's not needed anymore and with previous versions
        it was already called by g_type_init().

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main):
        * GtkLauncher/main.c:
        (main):
        * MiniBrowser/gtk/main.c:
        (main):

2011-10-24  Alejandro G. Castro  <alex@igalia.com>

        [WK2] [GTK] WebKitTestRunner crashes with heap corruption
        https://bugs.webkit.org/show_bug.cgi?id=69403

        We did not added autotoolsconfig.h to the config.h file and we